# ElectronicBlinds

./: .gitmodules
Hardware/3D_Models/: BoltLocker.stl  CE3E3_BlindsMount.gcode  CE3E3_BlindsShaftAdapter.gcode  CE3E3_BlindsSlider.gcode  CE3E3_BoardStand.gcode  CE3E3_BoltLocker.gcode  CE3E3_Case.gcode  CE3E3_CaseLid.gcode  CE3E3_GearCase.gcode  CE3E3_MotorHolder.gcode  CE3E3_MotorShaftAdapter.gcode  CaseLid.stl
Hardware/CircuitSchematics/: H-bridge_circuit_FALSTAD_EXPORT.txt  SoftStarterMotorDC.circuitjs.txt
Software/Application/: Build.sh  BuildAndFlash.sh  CMakeLists.txt  CleanBuildAndFlash_TIMESETTER.sh  Flash_OpenOCD.sh  FreeRTOS_Kernel_import.cmake  pico_sdk_import.cmake
Software/Application/Standard/: AutomaticControlTask.c  AutomaticControlTask.h  ButtonTask.c  ButtonTask.h  CMakeLists.txt  ElectronicBlinds_Main.c  ElectronicBlinds_Main.h  MotorControllerTask.c  MotorControllerTask.h  main.c
Software/Application/SwComponents/: CMakeLists.txt
Software/Application/SwComponents/Include/: AutomaticControlTask.h  ButtonTask.h  ElectronicBlinds_Main.h  MotorControllerTask.h
Software/Application/SwComponents/Source/: AutomaticControlTask.c  ButtonTask.c  ElectronicBlinds_Main.c  MotorControllerTask.c
